@@ -7,5 +7,6 @@ CONFIG += @ac_debug@
 INCLUDEPATH = @ac_jack_incpath@
 LIBS += @ac_jack_libs@
 
+# Extra optimization flags
 QMAKE_CXXFLAGS += @ac_cflags@
-
+QMAKE_LFLAGS += @ac_ldflags@
